<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- NOTICIAS -->
    <item
        android:id="@+id/newsFragment"
        android:title="@string/news_option"
        android:icon="@drawable/news"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <!-- MÁS DESTACADAS -->
    <item
        android:id="@+id/trendingFragment"
        android:title="@string/trending_option"
        android:icon="@drawable/trending"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <!-- FAVORITOS -->
    <item
        android:id="@+id/likesFragment"
        android:title="@string/favorite_option"
        android:icon="@drawable/favorite"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <!-- RECIENTES -->
    <item
        android:id="@+id/recentFragment"
        android:title="@string/recent_option"
        android:icon="@drawable/ic_recent"
        android:enabled="true"
        app:showAsAction="ifRoom" />

</menu>