<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191C2E"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context="es.unex.giss.asee.whichnews.view.LoginActivity">

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="371dp"
        android:layout_height="196dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-37dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints="username"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans"
        android:gravity="start"
        android:hint="@string/user_string"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        tools:textColorHint="#7C7C7C" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans"
        android:gravity="start"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="292dp"
        tools:textColorHint="#FF7C7C7C" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="212dp"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <TextView
        android:id="@+id/bt_join"
        android:layout_width="261dp"
        android:layout_height="58dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:hint="@string/registrarse_string"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:textColorHint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>